--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ var:
   categories_path : /categories.html
   tags_path : /tags.html
 
-production_url : http://username.github.com # or your custom domain name
+production_url : http://pradeepnayak.in # or your custom domain name
 title : My Blog =)
 
 author :
