--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,5 @@ author :
   name : Pradeep Nayak
   email : pradeep1288@gmail.com
   github : pradeep1288
+  disqus_shortname: pradeepnayak
   twitter : prdpnayak
