added instagram and google analytics code

--- a/_config.yml
+++ b/_config.yml
@@ -16,14 +16,14 @@ owner:
   facebook: pradeepnayak      
   github: pradeep1288        
   linkedin:       
-  instagram:      
+  instagram: _prdp     
   lastfm:         
   tumblr:         
   # For Google Authorship https://plus.google.com/authorship
   google_plus:    
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   
+google_analytics: UA-7002753-4   
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:        
