updating permalink so that I have access to earlier comments

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,8 @@ pygments:    true
 markdown:    kramdown
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title/
+# permalink:   /:categories/:title/
+permalink: /:categories/:year/:month/:day/:title
 
 kramdown:
   auto_ids: true
