--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:            Pradeep Nayak
 tagline:          Life is a sport. Make it count
 description:      My experiences in general.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-#url:              http://localhost:4000
-url:              http://pradeepnayak.in
+url:              http://localhost:4000
+#url:              http://pradeepnayak.in
 
 # Owner/author information
 owner:
@@ -13,21 +13,21 @@ owner:
   email:          pradeep1288@gmail.com
   disqus_shortname:     pradeepnayak
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: _prdp        
-  facebook: pradeepnayak      
-  github: pradeep1288        
-  linkedin:       
-  instagram: _prdp     
-  lastfm:         
-  tumblr:         
+  twitter: _prdp
+  facebook: pradeepnayak
+  github: pradeep1288
+  linkedin:
+  instagram: _prdp
+  lastfm:
+  tumblr:
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    
+  google_plus:
 
 # Analytics and webmaster tools stuff goes here
-google_analytics: UA-7002753-4   
-google_verify:      
+google_analytics: UA-7002753-4
+google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
-bing_verify:        
+bing_verify:
 
 # Links to include in top navigation
 # For external links add external: true
@@ -55,7 +55,7 @@ kramdown:
   use_coderay: false
 
   coderay:
-    coderay_line_numbers: 
+    coderay_line_numbers:
     coderay_line_numbers_start: 1
     coderay_tab_width: 4
     coderay_bold_every: 10
